
* Sort constraints are now propagated in simultaneous statements, just
like type constraints.  INCOMPATIBILITY in rare situations, where
distinct sorts used to be assigned accidentally.  For example:

  lemma "P (x::'a::foo)" and "Q (y::'a::bar)"  -- "now illegal"

  lemma "P (x::'a)" and "Q (y::'a::bar)"
    -- "now uniform 'a::bar instead of default sort for first occurence (!)"


*** HOL ***

* Finite_Set.fold now qualified.  INCOMPATIBILITY.

* Renamed some facts on canonical fold on lists, in order to avoid problems
with interpretation involving corresponding facts on foldl with the same base names:

  fold_set_remdups ~> fold_set_fold_remdups
  fold_set ~> fold_set_fold
  fold1_set ~> fold1_set_fold

INCOMPATIBILITY.

* 'set' is now a proper type constructor.  Definitions mem_def and Collect_def
have disappeared.  INCOMPATIBILITY, rephrase sets S used as predicates by
`%x. x : S` and predicates P used as sets by `{x. P x}`.  For typical proofs,
it is often sufficent to prune any tinkering with former theorems mem_def
and Collect_def.

* Theory HOL/Library/AList has been renamed to AList_Impl. INCOMPATIBILITY.

* 'datatype' specifications allow explicit sort constraints.

* Theory HOL/Library/Diagonalize has been removed. INCOMPATIBILITY, use
theory HOL/Library/Nat_Bijection instead.

* Session HOL-Word: Discontinued many redundant theorems specific to type
'a word. INCOMPATIBILITY, use the corresponding generic theorems instead.

  word_sub_alt ~> word_sub_wi
  word_add_alt ~> word_add_def
  word_mult_alt ~> word_mult_def
  word_minus_alt ~> word_minus_def
  word_0_alt ~> word_0_wi
  word_1_alt ~> word_1_wi
  word_add_0 ~> add_0_left
  word_add_0_right ~> add_0_right
  word_mult_1 ~> mult_1_left
  word_mult_1_right ~> mult_1_right
  word_add_commute ~> add_commute
  word_add_assoc ~> add_assoc
  word_add_left_commute ~> add_left_commute
  word_mult_commute ~> mult_commute
  word_mult_assoc ~> mult_assoc
  word_mult_left_commute ~> mult_left_commute