@@ -386,7 +386,7 @@ let
       (* FIXME proper name context!? *)
       val x = Free (singleton (Name.variant_list (fold Term.add_free_names [p, e] [])) "x", dummyT);
       val e = if opti then singl e else e;
-      val case1 = Syntax.const @{syntax_const "_case1"} $ Term_Position.strip_positions p $ e;
+      val case1 = Syntax.const @{syntax_const "_case1"} $ p $ e;
       val case2 =
         Syntax.const @{syntax_const "_case1"} $
           Syntax.const @{const_syntax dummy_pattern} $ NilC;
